# acme-hello-api

./: Dockerfile  README.md  compose.yml  pyproject.toml  run.sh
.github/workflows/: container.yml  release.yml  release_k8.yml
docs/: mkdocs.yml
docs/docs/: api.md  index.md  install.md
k8/: deployment.yaml  get_sa_token.sh  kustomization.yaml  namespace.yaml  role.yaml  rolebinding.yaml  sa_secret.yaml  service.yaml  serviceaccount.yaml
src/acme_hello_api/: __init__.py  app.py
